# fast_chat

./: .gitignore  AGENTS.md  QWEN.md  docker-compose.yml  serve.js
admin-panel/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
admin-panel/src/: main.js  router.ts
admin-panel/src/api/: index.ts  serverApi.ts  types.ts  userApi.ts
admin-panel/src/plugins/: vuetify.ts
admin-panel/src/views/: Dashboard.vue  Login.vue  Settings.vue  Users.vue
cli/: .gitignore  Cargo.toml
cli/proto/: auth.rs  common.rs  files.rs  messaging.rs  mod.rs  signaling.rs  users.rs
cli/src/: main.rs
coturn/: turnserver.conf
docs/: E2E_PLAN.md
envoy/: envoy.yaml
ion-sfu/: config.toml
migrations/: 001_initial.sql  002_e2e_key_sync.sql  002_features.sql  003_backup_codes_encrypted.sql  003_schema_migrations.sql  003_unread_counts.sql  005_sessions_index.sql  006_passwordless_auth.sql  006_unread_counts.sql  007_passwordless_auth.sql  008_bots.sql  008_server_settings.sql  009_channels.sql  010_push_notifications.sql  011_push_notifications.sql  012_drop_password_hash.sql  013_cleanup_duplicate_chats.sql  014_cleanup_test_messages.sql  015_hidden_chats.sql  016_messages_channel_support.sql  017_unread_counts_channel_support.sql
proto/: auth.proto  common.proto  files.proto  messaging.proto  signaling.proto  users.proto
server/: .gitignore  Cargo.toml  Dockerfile  build.rs
server/src/: config.rs  constants.rs  error.rs  main.rs
server/src/cli/: mod.rs
server/src/crypto/: keys.rs  mod.rs
server/src/db/: postgres.rs  redis.rs
server/src/domain/: chat.rs  message.rs  mod.rs  user.rs
server/src/dto/: auth.rs  chat.rs  common.rs  message.rs  mod.rs
server/src/middleware/: jwt.rs  mod.rs
server/src/models/: bot.rs  call.rs  channel.rs  chat.rs  file.rs  message.rs  mod.rs  pinned_message.rs  push.rs  session.rs  thread.rs  topic.rs  unread_count.rs  user.rs
server/src/proto/: auth.rs  common.rs  messaging.rs  mod.rs  users.rs
server/src/repositories/: chat_repo.rs  message_repo.rs  mod.rs  session_repo.rs  settings_repo.rs  user_repo.rs
server/src/rest/: handlers.rs  middleware.rs  mod.rs
server/src/routes/: admin.rs  auth.rs  bots.rs  channels.rs  dto.rs  files.rs  keys.rs  messaging.rs  mod.rs  push.rs  signaling.rs  sse.rs  users.rs
server/src/services/: auth.rs  auth_service.rs  chat_service.rs  files.rs  messaging.rs  mod.rs  signaling.rs  users.rs
server/src/sse/: manager.rs  mod.rs
wasm-sdk/: .gitignore  Cargo.toml  README.md
wasm-sdk/src/: crypto.rs  error.rs  lib.rs
web-client/: Dockerfile  dev-cert.pem  dev-key.pem  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web-client/certs/: generate-dev-certs.sh
web-client/public/: manifest.webmanifest
web-client/src/: App.vue  index.html  main.ts  router.ts
web-client/src/__tests__/: crypto.test.ts  http-client.test.ts  setup.ts
web-client/src/api/: client.ts
web-client/src/api/admin/: index.ts
web-client/src/components/: LoginForm.vue
web-client/src/core/api/: file-api.ts  http-client.ts
web-client/src/core/crypto/services/: crypto.service.ts
web-client/src/core/crypto/stores/: crypto.store.ts
web-client/src/core/crypto/types/: index.ts
web-client/src/core/db/services/: db.service.ts
web-client/src/core/db/stores/: db.store.ts
web-client/src/core/db/types/: index.ts
web-client/src/core/network/services/: sse.service.ts
web-client/src/core/network/stores/: network.store.ts
web-client/src/core/network/types/: index.ts
web-client/src/crypto/: index.ts
web-client/src/db/: index.ts
web-client/src/features/auth/api/: auth-api.ts
web-client/src/features/auth/stores/: auth.store.ts
web-client/src/features/auth/types/: index.ts
web-client/src/features/channel/api/: channel-api.ts
web-client/src/features/channel/stores/: channel.store.ts
web-client/src/features/channel/types/: index.ts
web-client/src/features/chat/api/: chat-api.ts
web-client/src/features/chat/stores/: chat.store.ts
web-client/src/features/chat/types/: index.ts
web-client/src/features/crypto/api/: crypto-api.ts
web-client/src/features/crypto/types/: index.ts
web-client/src/features/notification/api/: notification-api.ts
web-client/src/features/notification/types/: index.ts
web-client/src/shared/types/: index.ts
web-client/src/stores/: app.ts
web-client/src/types/: index.ts
web-client/src/views/: ChannelView.vue  ChatView.vue  LoginView.vue
web-client/src/views/admin/: Dashboard.vue  DashboardLayout.vue  Settings.vue  Users.vue
web-client/test/: admin-button.test.js  chat-creation.test.js  debug-search.js  e2e-chat.test.js  login.test.js  sse-realtime.test.js  user-search.test.js
