[package]
name = "fast-chat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"