[package]
name = "fast-chat-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fast-chat-server"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
argon2 = "0.5"
totp-lite = "2"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
rand = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
lazy_static = "1.5"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
