[package]
name = "fast-chat-wasm-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Storage",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "AbortController",
] }
getrandom = { version = "0.2", features = ["js"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.8"
thiserror = "1"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
